# test_law_rag

./: pyproject.toml  test1_Law_Document_Structuring_Data.py  test2_Neo4j_Qdrant_Data_Insert.py  test3_Law_RAG_QA.py
ragas/: test_rag_1_Ragas_Evaluation_Dataset_Generator.py  test_rag_2_Ragas_Evaluation.py  test_rag_2_Ragas_Evaluation_2.py
